apps/base/matrix/networking/element-ingress.yaml
# Element Web IngressRoute and TLS Certificate
# Handles traffic for element.cluster.arpa
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: element
  namespace: app-matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`element.cluster.arpa`)
      kind: Rule
      services:
        - name: element
          port: http
  tls:
    secretName: element-tls
