apps/base/matrix/networking/synapse-ingress.yaml
# Synapse IngressRoute and TLS Certificate
# Handles traffic for matrix.cluster.arpa
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
  namespace: app-matrix
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.cluster.arpa`)
      kind: Rule
      services:
        - name: synapse
          port: http
  tls:
    secretName: synapse-tls
